--- a/style.css
+++ b/style.css
@@ -17,18 +17,18 @@ header {
 
 header,
 form {
-  min-height: 20vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    min-height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 form input,
 form button {
-  padding: 0.5rem;
-  font-size: 2rem;
-  border: none;
-  background: white;
+    padding: 0.5rem;
+    font-size: 2rem;
+    border: none;
+    background: white;
 }
 
 form button {
@@ -43,3 +43,41 @@ form button:hover {
     color: white;
 }
 
+.todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+ .todo-list {
+    min-width: 30%;
+    list-style: none;
+}
+
+.todo {
+    margin: 0.5rem;
+    background: white;
+    font-size: 1.5rem;
+    color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.todo li {
+    flex: 1;
+}
+
+.trash-btn,
+.complete-btn {
+    background: #ff6f47;
+    color: white;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.complete-btn {
+    background: rgb(11, 212, 162);
+}
