--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ form button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all .5s ease;
 }
 
 .todo li {
@@ -86,3 +87,18 @@ form button:hover {
     padding: 0rem 0.5rem;
 }
 
+/* can't click on these anymore */
+.fa-trash,
+.fa-check {
+    pointer-events: none;
+}
+
+.completed{
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+
+.fall {
+    transform: translateY(8rem) rotateZ(20deg);
+    opacity: 0;
+}
